0.17
 - loaded classes can be made immutable for better performance vs a bit more load time   

0.16
 - docu fixes by Gimpson
 - Timeout for all user agents set to 60 seconds. Will be configurable soon
 - S3 Update: Support for S3 Standard - Infrequent Access 
 - CloudWatchLogs Update: Export tasks
 - CloudFormation API Update: support for ResourceTypes
 - EC2 API update: Update to SpotFleet requests
 - SES API update: Support for Incoming mail
 - RDS API update: Changes to API for Aurora DBs (DBCluster operations)
 - CloudTrail API update: Log File Integrity Verification and Tagging
 - Workspaces API update: Volume encrytption
 - New ElasticSearch API (ES)
 - New WAF API (Web Application Firewall)
 - New Firehose API
 - New Inspector API
 - New MarketplaceCommerceAnalytics API
 - Config API update: Compliance rules
 - CloudFront API update
 - Kinesis API update: adjust the data retention window
 - EC2 API update: Spot blocks for Defined-Duration workloads
 - Lambda API update: Support for Aliases
 - ECS API update: new functionalities
 - New IoT and IoTData APIs

0.15 16 Sep 2015
 - fix unicode issues in test t/10_responses.t (ioanrogers)
 - fix bug handling responses with ArrayRef of Maps (DynamoDB reported by stevecaldwell77)
 - fix S3 to be able to use temporary credentials (stevecaldwell77)
 - fix bug that could produce different timestamps in Date and X-Amz-Date headers (ilmari)
 - Pull Request #53 (karenetheridge): "Update some module dependencies"
   - JSON Parsing now depending on JSON::MaybeXS
   - include META.json in package
   - remove uri_escape code for perl 5.8
 - ElasticBeanstalk API update: support for Instance and Environment health 
 - Codepipeline API update: support for encription key
 - Config API update: ListDiscoveredResources
 - EC2 API update: Resource oriented bidding for spot instances
 - StorageGateway API update: tagging
 - S3 API update: event filtering
 - IAM API update: Policy simulation methods